Account service added with post method
